namespace java com.service.hello

service HelloService{
	string sayHello(1:string username);
}